feature: start chats controller
