# src/core/chats/chats.api.ts
@@ -1,0 +1,7 @@
+export const CHATS_ONTROLLER = '/chats';
+export const CHATS_ROUTES = {
+  NEW_CHAT: '',
+  GET_BY_ID: '/by-id/:id',
+  UPDATE: '/by-id/:id',
+  DELETE: '/by-id/:id',
+} as const;
